--- a/packages/sdk-client/package.json
+++ b/packages/sdk-client/package.json
@@ -12,7 +12,7 @@
     "oauth",
     "auth"
   ],
-  "author": "Chukwuemeka Ajima <meeky.ae@gmail.com>",
+  "author": "Chukwuemeka Ajima",
   "homepage": "https://github.com/commercetools/commercetools-sdk-typescript",
   "license": "MIT",
   "main": "dist/index.js",
